Fixed the screenshot size on mobile

--- a/src/Components/Projects/styles.css
+++ b/src/Components/Projects/styles.css
@@ -90,6 +90,7 @@
 .logo-column-grid {
   grid-row-start: 3;
   grid-column: 1/2;
+  width: 100px;
 }
 .project-header-holder {
   grid-column: 0/2;
@@ -156,6 +157,11 @@
   grid-column: 1;
   grid-row: 3;
 }
+#minterval-ss {
+  grid-area: 4/ 4/ 4/ 5;
+  border-radius: 5px;
+  width: 100%;
+}
 @media (max-width: 1200px) {
   #yolkify-web-ss {
     grid-area: 2/ 4/ 5/ 5;
@@ -176,10 +182,50 @@
     padding: 10px;
     width: 90vw;
     margin-left: 10px;
+    grid-template-rows: auto auto 300px auto;
   }
   .yolkify-web-grid {
     padding: 10px;
     width: 90vw;
     margin-left: 10px;
+    grid-template-rows: auto auto 300px auto;
+  }
+  #minterval-ss-column {
+    grid-area: 3/ 1/ 4/ -1;
+    border-radius: 5px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .project-description {
+    /* font-size: 20pt; */
+    grid-area: 2/ 1/ 3/ -1;
+  }
+  .minterval-ss {
+    border-radius: 5px;
+    /* width: 50%; */
+  }
+  .skill-name-holder-grid {
+    grid-column: 3;
+    grid-row-start: 4;
+  }
+  .skill-holder-grid {
+    grid-column: 2;
+    grid-row: 4;
+  }
+  #yolkify-web-ss {
+    grid-area: 3/ 1/ 5/ -1;
+    border-radius: 5px;
+    width: 100%;
+  }
+  #yolkify-dashboard {
+    grid-area: 3/ 1/ 4/ 3;
+    height: 100%;
+    max-height: 400px;
+  }
+  #yolkify-profile {
+    grid-area: 3/ 4/ 4/ -1;
+    height: 100%;
+    max-height: 400px;
   }
 }
